--- a/zip-code-backend/package.json
+++ b/zip-code-backend/package.json
@@ -8,7 +8,7 @@
     "build:watch": "tsc -w",
     "start": "node -r ts-node/register ./src/server.ts",
     "start:watch": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "author": "Alejandro Malasquez",
   "license": "ISC",
@@ -23,7 +23,10 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-graphql": "^0.9.0",
+    "@types/jest": "^27.5.1",
+    "jest": "^28.1.0",
     "nodemon": "^2.0.16",
+    "ts-jest": "^28.0.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   }
